# eclipse_parser

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
scripts/: .env.file.example  main.py
src/eclipse_parser/common/: __init__.py  chunks_reader.py  defaults.py
src/eclipse_parser/parser/: __init__.py  file_reader.py
tests/: test_intrg.py  test_unit.py
tests/test_data/: example_result.csv  reference_result.csv  test_schedule.inc
