[metadata]
name = eclipse-parser
description = ''
author = ''
;license =
;license_file =
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.9
package_dir =
    =src
zip_safe = no
