[metadata]
name = eclipse-parser
description = ''
author = ''
;license =
;license_file =
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    eclipse_parser
python_requires = >=3.9
install_requires =
    pandas==1.4.2
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    flake8>=3.9
    tox>=3.24

[options.package_data]
eclipse-parser = py.typed

[flake8]
max-line-length = 160
